Modify table css to fix border on firefox

--- a/stylesheets/block-code.css
+++ b/stylesheets/block-code.css
@@ -10,7 +10,7 @@ code {
 	color: #586e75;
 }
 
-table, td {
+table {
 	display: table;
 	border-collapse: collapse;
 	text-align: left;
